# roomielib

./: .gitignore  LICENSE  README.md
apps/: pong.json  sphere.json  zerog_bowling.json
clients/cpp/: CMakeLists.txt
clients/cpp/examples/raylib_pong/: CMakeLists.txt  main.cpp
clients/cpp/include/roomie/: roomie_client.hpp
clients/cpp/src/: roomie_client.cpp
clients/csharp/: BincodeReader.cs  BincodeWriter.cs  Protocol.cs  RoomieClient.cs  RoomieWebSocket.jslib
clients/gml/: roomie_client.gml  roomie_decode.gml  roomie_encode.gml  roomie_varint.gml
schema/: pong.json  zerog_bowling.json
server/: Cargo.toml
server/src/: debug.rs  lib.rs  main.rs
server/src/protocol/: frame.rs  messages.rs  mod.rs
server/src/room/: identity.rs  mod.rs  pool.rs  room.rs
server/src/schema/: codec.rs  load.rs  mod.rs  types.rs
server/src/server/: connection.rs  dispatch.rs  http.rs  mod.rs  validation.rs
