[package]
name = "roomie"
version = "0.1.0"
edition = "2021"
description = "Ultralight networked game relay: TCP, data-driven state, client authority, host migration, multi-app rooms"

[features]
default = []
debug = []

[dependencies]
serde = { version = "1", features = ["derive"] }
unicase = "2"
serde_json = "1"
bincode = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "signal", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = { version = "1", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
dashmap = "6"
parking_lot = "0.12"
rand = "0.8"
tokio-tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }
axum = { version = "0.7", features = ["json"] }

[workspace]
members = []

[profile.release]
lto = true
codegen-units = 1
strip = true
